[gd_scene load_steps=12 format=2]

[ext_resource path="res://EnemeyContainer/Basic_enemies/laser_dragon_beam.gd" type="Script" id=1]
[ext_resource path="res://EnemeyContainer/Skele_type/blood_eyes.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemy/PngsFiles/laser_eye.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy/PngsFiles/bot_laser_eye.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 81.7435

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../bot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "normal"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../bot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("bot/top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "charge_up"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("bot/top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=6]
resource_name = "laser_out"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("bot/top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=7]
resource_name = "retract"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("bot/top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28, 29, 30 ]
}

[node name="KinematicBody2D" type="KinematicBody2D" groups=["eye_group", "small_group"]]
script = ExtResource( 2 )

[node name="Center" type="Position2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["small_group"]]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="bot" type="Sprite" parent="."]
position = Vector2( 5, 76 )
texture = ExtResource( 4 )
hframes = 2
vframes = 2

[node name="top" type="Sprite" parent="bot"]
position = Vector2( -3, -77 )
texture = ExtResource( 3 )
hframes = 6
vframes = 6

[node name="ani_bot" type="AnimationPlayer" parent="."]
root_node = NodePath("../ani_top")
anims/RESET = SubResource( 2 )
anims/normal = SubResource( 3 )

[node name="ani_top" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/charge_up = SubResource( 5 )
anims/laser_out = SubResource( 6 )
anims/retract = SubResource( 7 )

[node name="lazer_axis" type="Position2D" parent="."]
__meta__ = {
"_gizmo_extents_": 0.0
}

[node name="Line2D" type="Line2D" parent="lazer_axis"]
position = Vector2( -4, 7 )
scale = Vector2( 1.85294, 1.56407 )
points = PoolVector2Array( -12, 2287, 2, -3 )
default_color = Color( 0.992157, 1, 0.0588235, 0.639216 )

[node name="lazer" type="RayCast2D" parent="lazer_axis"]
enabled = true
collision_mask = 2
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="lazer_axis/lazer"]
modulate = Color( 0.952941, 0.12549, 0.0117647, 1 )
position = Vector2( 0.00432123, 27.0371 )
points = PoolVector2Array( -0.00432123, -27.0371, 0.00927584, 58.0371 )
width = 1.0
default_color = Color( 0.909804, 0.109804, 0.027451, 1 )

[node name="end" type="Position2D" parent="lazer_axis/lazer"]
position = Vector2( -0.00111285, -6.96289 )
rotation = -0.000159826

[node name="Tween" type="Tween" parent="lazer_axis/lazer"]

[node name="laser_timer" type="Timer" parent="."]

[connection signal="timeout" from="laser_timer" to="." method="_on_laser_timer_timeout"]
